# soundscape

./: .gitignore  CMakeLists.txt  build_shaders.sh
inc/: AudioRecord.h  Buffer.h  Command.h  CommandManager.h  CoverArt.h  Descriptor.h  DescriptorManager.h  Device.h  Format.h  Framebuffer.h  Globals.h  HelloTriangleApplication.h  Image.h  Memory.h  Model.h  Palette.h  Pipeline.h  PipelineLayout.h  Queue.h  RenderPass.h  RenderTarget.h  SamplerImage.h  Sprite.h  StagingBuffer.h  SwapChain.h  SwapChainSupport.h  Texture.h  TextureImage.h  UniformBuffer.h  Vertex.h  VertexBuffer.h  Visual.h  main.h
inc/communication/: content_download.h
models/: backdrop.mtl  bar.glb  bar.gltf  bar2.glb  bar2.gltf  bar3.glb  bart.mtl  cover_art.mtl
shaders/: backdrop.frag  backdrop.vert  bar.frag  bar.vert  cover_art.frag  cover_art.vert  shader.vert
src/: AudioRecord.cpp  Buffer.cpp  Command.cpp  CommandManager.cpp  CoverArt.cpp  DescriptorManager.cpp  Device.cpp  Format.cpp  Framebuffer.cpp  HelloTriangleApplication.cpp  Image.cpp  Memory.cpp  Model.cpp  Palette.cpp  Pipeline.cpp  PipelineLayout.cpp  Queue.cpp  RenderPass.cpp  RenderTarget.cpp  SamplerImage.cpp  Sprite.cpp  StagingBuffer.cpp  SwapChain.cpp  TextureImage.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Visual.cpp  main.cpp
src/communication/: content_download.cpp  shazam.cpp
src/vibra/communication/: shazam.cpp
